--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -1,95 +1,145 @@
 @font-face {
-    font-family: "Amais MT Pro Black";
-    src: url("AmaisMTProBlack.woff2") format("woff2");
-    font-weight: normal;
-    font-style: normal;
-  }
+  font-family: "Amais MT Pro Black";
+  src: url("AmaisMTProBlack.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
 
 header
 {
-    color: white;
-    text-align: left;
-    background-color: rgb(0, 153, 255);
-    padding: 10px;
-    width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(0, 153, 255);
+  padding: 10px 50px;
+  color: white;
 }
 
-ul
+.header-container 
 {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-}
-ul li
-{
-    display: inline;/*navigation menu inline*/
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
 }
 
-ul a/* editing navigation menu content */
+.logo-title 
 {
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
+
+.logo 
+{
+  width: 50px;
+  height: auto;
+}
+
+h1 
+{
+  font-size: 24px;
+  margin: 0;
+}
+
+nav ul 
+{
+  display: flex;
+  list-style: none;
+  padding: 0;
+  gap: 20px;
+  margin: 0;
+}
+
+nav ul li a 
+{
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.class-project 
+{
+  font-size: 16px;
+  margin: 0;
+  color: white;
+}
+
 .menuNavigation
 {
-    text-align: center;
-    background-color:   rgb(0, 153, 255);
-    width: 100vw;
-    padding: 10px;
-   
-}
-#subhead
-{
-    text-align: center;
-    color: rgb(0, 153, 255);
-}
-
-#events
-{
-    text-align: left;
-    color: rgb(0, 153, 255);
-    padding: 30px;
-    margin-left: 20%;
-    margin-bottom: 0px;
-}
-
-#pic1
-{
-    display:inline;
-    width: 350px;
-    height: 250px;
-    margin-left: 17%;
-    border-radius: 10px;
-}
-
-#description
-{
+  color: white;
   text-align: center;
-  width: 50%;
-  margin-left: 25%;
   background-color:   rgb(0, 153, 255);
-  border-radius: 10px;
+  width: 100vw;
+  padding: 1px;
+   
 }
 
 #mainPic
 {
-    width: 60%;
-    height: 400px;
-    margin-left: 20%;
-    border: 30px solid transparent;
+  width: 60%;
+  margin-left: 20%;
+  border: 30px solid transparent;
+}
+
+.description
+{
+  background-color: rgb(0, 153, 255);
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+}
+
+.description p
+{
+  color: white;
+  font-size: 18px;
+  line-height: 1.6;
+  max-width: 40%;
+  margin: 0 auto;
+  white-space: normal;
+}
+
+#subhead
+{
+  text-align: center;
+  color: rgb(0, 153, 255);
+}
+
+#events
+{
+  text-align: left;
+  color: rgb(0, 153, 255);
+  padding: 30px;
+  margin-left: 20%;
+  margin-bottom: 0px;
+}
+
+#pic1
+{
+  display:inline;
+  width: 350px;
+  height: 250px;
+  margin-left: 17%;
+  border-radius: 10px;
 }
 
 #pics
 {
-    display:inline;
-    width: 350px;
-    height: 250px;
-    margin-right: 5px;
-    margin-left: 10px;
-    border-radius: 10px;
+  display:inline;
+  width: 350px;
+  height: 250px;
+  margin-right: 5px;
+  margin-left: 10px;
+  border-radius: 10px;
+}
+
+#sportpics
+{
+  width: 350px;
+  height: 250px;
+  margin-left: 40%;
+  border-radius: 10px;
 }
 
 .event {
@@ -101,63 +151,62 @@ ul a/* editing navigation menu content */
 
 p
 {
-    text-align: center;
-    color: black;
-    margin-left: 20px;
-    margin-right: 20px;
-    padding: 20px;
+  text-align: center;
+  color: black;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding: 20px;
 }
 
 .pi
 {
-    text-align: left;
-    color: black;
-    margin-left: 20px;
-    margin-right: 20px;
-    padding: 20px;
+  text-align: left;
+  color: black;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding: 20px;
 }
 
 #mainText
 {
-    text-align: left ;
+  text-align: left ;
 }
 
 body, html/* the main body of the website*/
 {
-    font-family: "Amais MT Pro Black", sans-serif;
-    background-color: white;
-    margin: 0;
-    padding: 0;
+  font-family: "Amais MT Pro Black", sans-serif;
+  background-color: rgb(255, 255, 255);
+  margin: 0;
+  padding: 0;
 }
 
-.rugby {
-    display: flex;
-    align-items: center;
-    justify-content: center ;
-    gap: 20px;
-    padding: 20px;
-  }
+.sportsEvent {
+  display: block;
+  justify-content: center;
+  background: white; 
+  border: 1px solid #ddd; /* Adds a light gray border around the event */
+  border-radius: 8px; 
+  padding: 20px; 
+  margin-bottom: 20px; 
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  width: 90%; /* Makes the container take up 90% of the width of the page */
+  max-width: 1200px; /* Limits the maximum width of the container */
+  margin: 20px auto; /* Adds space around the container and centers it */
 
-  .basketball {
-    display: flex;
-    align-items: center;
-    justify-content: center ;
-    gap: 20px;
-    padding: 20px;
-  }
+}
 
-  #bg-video {
-    width: 60%;
-    height: 400px;
-    margin-right: 20%;
-    margin-left: 20%;
-    border: 1px solid transparent;
-  }
+#bg-video {
+  width: 60%;
+  height: 400px;
+  margin-right: 20%;
+  margin-left: 20%;
+  border: 1px solid transparent;
+}
 
-  * {box-sizing: border-box}
+* {box-sizing: border-box}
 
 /* Full-width input fields */
-  input[type=text], input[type=password] {
+input[type=text], input[type=password] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -220,13 +269,14 @@ button:hover {
 
 footer /* bottom*/
 {
-    bottom: 0;
-    width: 100vw;
-    background-color: rgb(0, 153, 255);
-    padding: 0.1px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(0, 153, 255);
 }
+
 footer p
 {
-    color: whitesmoke;
-    text-align: cent
+  color: whitesmoke;
+  text-align: center;
 }
