--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -85,9 +85,11 @@ nav ul li a
 .description
 {
   background-color: rgb(0, 153, 255);
-  width: 100%;
+  width: 70%;
+  margin-left: 15%;
   padding: 20px;
   text-align: center;
+  border-radius: 10px;
 }
 
 .description p
@@ -95,7 +97,7 @@ nav ul li a
   color: white;
   font-size: 18px;
   line-height: 1.6;
-  max-width: 40%;
+  max-width: 70%;
   margin: 0 auto;
   white-space: normal;
 }
@@ -215,6 +217,37 @@ body, html/* the main body of the website*/
   padding: 0;
 }
 
+.recentevent
+{
+  width: 50%;
+  height: 400px;
+  margin-left: 40%;
+  border: 1px solid transparent;
+  padding: 20px;
+}
+
+.recenttext
+{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 40;
+  margin: auto;
+  padding: 20px;
+}
+
+.recenttext h2
+{
+  text-align: left;
+  margin-bottom: 10px;
+}
+
+.recenttext p
+{
+  text-align: justify;
+}
+
+
 #bg-video {
   width: 60%;
   height: 400px;
@@ -289,10 +322,12 @@ button:hover {
 
 footer /* bottom*/
 {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  background-color: rgb(0, 153, 255);
+    background-color: #0099ff; /* Adjust to match your design */
+    color: white;
+    text-align: center;
+    padding: 10px;
+    position: relative;
+    width: 100%;
 }
 
 footer p
