--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -162,17 +162,18 @@ iframe
   border-radius: 10px;
   padding: 20px;
   max-width: 80%;
-  margin: 20px auto;
+  margin: 40px 10%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: #f9f9f9;
   text-align: center;
 }
 
-.sportspics {
-  width: 200px;
-  height: auto;
+#sportpics
+{
+  width: 350px;
+  height: 250px;
+  margin-left: 0%;
   border-radius: 10px;
-  margin: 20px;
 }
 
 .event-details {
@@ -202,63 +203,6 @@ iframe
 {
   text-align: center;
   color: rgb(0, 153, 255);
-}
-
-#pic1
-{
-  display:inline;
-  width: 350px;
-  height: 250px;
-  margin-left: 17%;
-  border-radius: 10px;
-}
-
-#pics
-{
-  display:inline;
-  width: 350px;
-  height: 250px;
-  margin-right: 5px;
-  margin-left: 10px;
-  border-radius: 10px;
-}
-
-#sportpics
-{
-  width: 350px;
-  height: 250px;
-  margin-left: 40%;
-  border-radius: 10px;
-}
-
-.event {
-  display: block;
-  justify-content: center;
-  gap: 20px;
-  padding: 20px;
-}
-
-p
-{
-  text-align: center;
-  color: black;
-  margin-left: 20px;
-  margin-right: 20px;
-  padding: 20px;
-}
-
-.pi
-{
-  text-align: left;
-  color: black;
-  margin-left: 20px;
-  margin-right: 20px;
-  padding: 20px;
-}
-
-#mainText
-{
-  text-align: left ;
 }
 
 body, html/* the main body of the website*/
@@ -349,6 +293,13 @@ footer /* bottom*/
     padding: 10px;
     position: relative;
     width: 100%;
+}
+
+.footerbooknow /* bottom*/
+{
+    position: fixed;
+    width: 100vw;
+    bottom: 0;
 }
 
 footer p
