--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -11,7 +11,7 @@ header
   align-items: center;
   justify-content: space-between;
   background-color: rgb(0, 153, 255);
-  padding: 10px 50px;
+  padding: 10px 10px;
   color: white;
 }
 
@@ -110,6 +110,7 @@ nav ul li a
   max-width: 800%;
   margin-left: 5%;
   padding: 10px;
+  
 }
 
 .eventtext
@@ -117,10 +118,11 @@ nav ul li a
   width: 30%;
   height: 400px;
   margin-left: 0%;
-  border: 1px solid transparent;
   padding: 20px;
-  background-color: rgb(0, 153, 255);
+  border: 2px solid #ddd;
   border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #f9f9f9;
 }
 
 .eventtext h2
@@ -129,14 +131,13 @@ nav ul li a
   margin-bottom: 10px;
   margin-left: 25%;
   padding: 10px;
-  color: white;
 }
 
 .eventtext p
 {
   text-align: justify;
   margin-left: 0%;
-  color: white;
+  color: rgb(0, 153, 255);;
 }
 
 .eventvideo
@@ -213,12 +214,41 @@ body, html/* the main body of the website*/
   padding: 0;
 }
 
-#bg-video {
-  width: 60%;
-  height: 400px;
-  margin-right: 20%;
-  margin-left: 20%;
-  border: 1px solid transparent;
+form {
+  max-width: 400px;
+  margin: auto;
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  border: 1px;
+  border-radius: 5px;
+}
+
+h2
+{
+    text-align: center;
+    color: rgb(0, 153, 255);
+}
+
+.map-container
+{
+  width: 40%;
+  height: 350px; /* Adjust height if needed */
+  border-radius: 10px;
+  margin-left: 30%;
 }
 
 * {box-sizing: border-box}
@@ -287,7 +317,7 @@ button:hover {
 
 footer /* bottom*/
 {
-    background-color: #0099ff; /* Adjust to match your design */
+    background-color: #0099ff;
     color: white;
     text-align: center;
     padding: 10px;
@@ -295,7 +325,7 @@ footer /* bottom*/
     width: 100%;
 }
 
-.footerbooknow /* bottom*/
+.footerbooknow
 {
     position: fixed;
     width: 100vw;
